<?xml version="1.0"?>
<package>
  <name>tof_mapping</name>
  <version>0.0.0</version>
  <description>tof mapping</description>

  <maintainer email="jinyao383@hotmail.com">jinyao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>


  <run_depend>roscpp</run_depend>

</package>
